2010-12-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m:
	([-stringByReplacingCharactersInRange:withString:]) fix memory leak.

2010-12-25  Quentin Mathe <quentin.mathe@gmail.com>

	Improved autogsdoc to output symbols such as methods in their header 
	declaration order along the gsdoc files. 
	Useful for third-party tools that want to generate final documentation
	from the GSDoc ouput and how the original headers were organized.
	* Tools/autogsdoc.m:
	Added OrderedSymbolDeclarations.plist file output and cleaning.
	* Tools/AGSParser.h:
	* Tools/AGSParser.m:
	Added orderedSymbolDecls ivar.
	(-addOrderedSymbolDeclaration:toUnit:,
	-orderedSymbolDeclarationsByUnit): Added.
	(-parseMethodsAsDeclarations:): Modified to call 
	-addOrderedSymbolDeclaration:toUnit:.

2010-12-25  Quentin Mathe <quentin.mathe@gmail.com>

	* Headers/Foundation/NSString.h:
	* Source/NSString.m:
	Added -stringByReplacingCharactersInRange:withString: (Mac OS 10.5 
	method).

2010-12-25 12:13-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Tools/pl2link.m: Changes to better integrate with the GNOME
	desktop.  Removed dummy version number.  Added code to
	find the correct locations of the application and it's icon.

2010-12-24  Nicola Pero <nicola.pero@meta-innovation.com>

	* Headers/Foundation/NSPropertList.h: Forward-declare the NSError
	class if appropriate.

2010-12-24  Nicola Pero <nicola.pero@meta-innovation.com>

	* Source/NSObject.m ([+conformsToProtocol:]): Use the new code
	only if __GNU_LIBOBJC__ is defined.
	* Source/Additions/GSObjCRuntime.m (GSTypesFromSelector): Updated
	usage of Modern typed selector API with __GNU_LIBOBJC__.
	* Source/GSFFIInvocation.m (gs_find_best_typed_sel): Same.
	(gs_objc_msg_forward2): Same.
	(GSFFIInvocationCallback): Same.
	
2010-12-24  Nicola Pero <nicola.pero@meta-innovation.com>

	* Source/NSObject.m ([+conformsToProtocol:]): Fixed to iterate
	over superclasses.  Just calling class_conformsToProtcol() is not